# Robotica_grupo_7

./: README.md
Alejandro/contenedores/: CMakeLists.txt  ejemplo1.cpp  ejemplo1.h  main.cpp
Alejandro/qt/: counterDlg.ui  ejemplo1.cpp
ejemplo1/: CMakeLists.txt  counterDlg.ui  ejemplo1.cpp  ejemplo1.h  main.cpp
tarea2/aspiradora/: README.md  cmake_install.cmake  control.cdsl
tarea2/aspiradora/.cmake/api/v1/reply/: directory-.-0b3e05491b05af35351f.json  directory-src-35ef2e886a5fee022d79.json  target-ICES__home_alumno_robocomp_components_Robotica_grupo_7_tarea2_aspiradora_src-22f196029cf4c39d2409.json  target-control_autogen-8ab9e4d28c8fb6bc3fdb.json
tarea2/aspiradora/etc/: config  giraff_azul  giraff_rosa  giraff_verde
tarea2/aspiradora/src/: CMakeLists.txt  Makefile  cmake_install.cmake  genericworker.h  main.cpp  mainUI.ui.new  specificmonitor.cpp  specificworker.cpp  specificworker.cpp.new  specificworker.h
tarea2/control/: CMakeLists.txt  control.cdsl
tarea2/control/etc/: config
tarea2/control/src/: CMakeLists.txt  genericworker.cpp  genericworker.h  main.cpp  specificworker.cpp  specificworker.h
tarea3/forcefield/src/: specificworker.cpp  specificworker.h
tarea3/targets_eye/: CMakeLists.txt  DoxyFile  README.md  target_eye.cdsl
tarea3/targets_eye/etc/: config  config.new  giraff_rojo
tarea3/targets_eye/src/: CMakeLists.txt  config.h  genericworker.cpp  genericworker.h  main.cpp  mainUI.ui  specificworker.cpp  specificworker.h
tarea4/forcefield/src/: CMakeListsSpecific.txt  door_detector.cpp  door_detector.h  dynamic_window.h  generic_object.cpp  generic_object.h  graph.cpp  graph.h  robot.cpp  robot.h  specificworker.cpp  specificworker.h  state_machine.cpp  state_machine.h
